Added frontend code to show feed

--- a/tweetservice/src/main/resources/application.properties
+++ b/tweetservice/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.h2.console.enabled=true
 spring.datasource.platform=h2
-spring.datasource.url=jdbc:h2:~/my_db
+spring.datasource.url=jdbc:h2:~/my_db2
 server.port=9090
 
