User registration is working

--- a/userservice/src/main/resources/application.properties
+++ b/userservice/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.h2.console.enabled=true
 spring.datasource.platform=h2
 spring.datasource.url=jdbc:h2:~/my_db
 server.port=9092
+spring.jackson.time-zone=Europe/Oslo
