Search is implemented for original tweets

--- a/tweetservice/src/main/resources/application.properties
+++ b/tweetservice/src/main/resources/application.properties
@@ -4,3 +4,27 @@ spring.datasource.url=jdbc:h2:~/my_db2
 server.port=9090
 spring.jackson.time-zone=Europe/Oslo
 
+
+
+
+
+
+
+#==================================
+# = Thymeleaf configurations
+#==================================
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
+#===================================
+#=
+# Specify the Lucene Directory
+spring.jpa.properties.hibernate.search.default.directory_provider = filesystem
+
+# Using the filesystem DirectoryProvider you also have to specify the default
+# base directory for all indexes
+spring.jpa.properties.hibernate.search.default.indexBase = indexpath
+
+
+spring.main.allow-bean-definition-overriding=true
